--- a/views/verifiedpage.html
+++ b/views/verifiedpage.html
@@ -1,3 +1,4 @@
+Amine Abdessayed
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -52,7 +53,7 @@
         <h2>Email Verification Success</h2>
         <p>Congratulations! Your email has been successfully verified.</p>
         <p>If you did not sign up for an account, you can safely ignore this email.</p>
-        <p>You can now continue to <a href="https://example.com/dashboard" class="button">Login to Your Account</a>.</p>
+        <p>You can now continue to <a href="http://localhost:3000/login" class="button">Login to Your Account</a>.</p>
         <p class="signature">Best regards,<br> better call us<br> Amine</p>
     </div>
 </body>
